--- a/PatientRecordMVVM/Views/PrintPreview.xaml
+++ b/PatientRecordMVVM/Views/PrintPreview.xaml
@@ -14,7 +14,8 @@
                 <RowDefinition Height="22*"/>
                 <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
-
+            
+            <!--Main Sub Grid 1-->
             <Grid x:Name="MainSubGrid" Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2.5*"/>
@@ -38,7 +39,7 @@
                     <Label FontSize="16" FontWeight="Bold" Foreground="White">
                         Patient ID :
                     </Label>
-                    <Label FontSize="16" Foreground="White" Margin="5,0,0,0" Content="{Binding PatientID}"/>
+                    <Label Content="{Binding PatientID}" FontSize="16" Foreground="White" Margin="5,0,0,0"/>
                 </StackPanel>
 
                 <!--Date block-->
@@ -46,11 +47,11 @@
                     <Label FontSize="16" FontWeight="Bold" Foreground="White">
                         Date :
                     </Label>
-                    <Label Name="date_time" FontSize="16" Foreground="White" Margin="5,0" Content="{Binding PatientRegisteredDate}"/>
+                    <Label Name="date_time" Content="{Binding PatientRegisteredDate}" FontSize="16" Foreground="White" Margin="5,0"/>
                 </StackPanel>
 
                 <!--Title block-->
-                <TextBlock Grid.Row="1" Grid.ColumnSpan="3"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" TextDecorations="Underline" Foreground="White">
+                <TextBlock Grid.Row="1" Grid.ColumnSpan="3" FontSize="20" FontWeight="Bold" Foreground="White" TextDecorations="Underline" HorizontalAlignment="Center" VerticalAlignment="Center">
 				Patient Registration Information
                 </TextBlock>
 
@@ -58,15 +59,15 @@
                 <Grid Grid.Row="2" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="25,10,25,20">
 
                     <!--User's image View and name-->
-                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
+                    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Ellipse Width="150" Height="150">
                             <Ellipse.Fill>
                                 <ImageBrush x:Name="ImageViewer2" ImageSource="{Binding PatientImageSource}"/>
                             </Ellipse.Fill>
                         </Ellipse>
-                        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,10">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10">
                             <Label Style="{StaticResource LabelStyles}" Margin="0">Patient Name :</Label>
-                            <TextBlock x:Name="ViewName" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientName}"/>
+                            <TextBlock x:Name="ViewName" Text="{Binding PatientName}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
@@ -89,30 +90,30 @@
 
                         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,5">
                             <Label Style="{StaticResource PreviewLabelStyles}" >Address :</Label>
-                            <TextBlock x:Name="ViewANum"  Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAddress.Number}"/>
-                            <TextBlock x:Name="ViewAStrt" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAddress.Street}"/>
-                            <TextBlock x:Name="ViewACity" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAddress.City}"/>
+                            <TextBlock x:Name="ViewANum" Text="{Binding PatientAddress.Number}" Style="{StaticResource TextBlockStyle}"/>
+                            <TextBlock x:Name="ViewAStrt" Text="{Binding PatientAddress.Street}" Style="{StaticResource TextBlockStyle}"/>
+                            <TextBlock x:Name="ViewACity" Text="{Binding PatientAddress.City}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
 
                         <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="50,5,10,10">
                             <Label  Style="{StaticResource PreviewLabelStyles}">Gender :</Label>
-                            <TextBlock x:Name="ViewGender" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientGender}"/>
+                            <TextBlock x:Name="ViewGender" Text="{Binding PatientGender}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
 
                         <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Margin="10,5">
                             <Label  Style="{StaticResource PreviewLabelStyles}">Date of Birth :</Label>
-                            <TextBlock x:Name="ViewDob" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientDateOfBirth}"/>
+                            <TextBlock x:Name="ViewDob" Text="{Binding PatientDateOfBirth}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
 
                         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="50,5,10,5">
                             <Label Style="{StaticResource PreviewLabelStyles}">Age :</Label>
-                            <TextBlock x:Name="ViewAge" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientAge}"/>
+                            <TextBlock x:Name="ViewAge" Text="{Binding PatientAge}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
                     </Grid>
                 </GroupBox>
 
                 <!--Sub grid 3-->
-                <GroupBox Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Margin="25,0,25,0">
+                <GroupBox Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="25,0,25,0">
                     <GroupBox.Header>
                         <TextBlock Style="{StaticResource TextBlockStyleControl}">Patient Medical Information</TextBlock>
                     </GroupBox.Header>
@@ -129,25 +130,25 @@
 
                         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,5">
                             <Label Style="{StaticResource PreviewLabelStyles}">Department :</Label>
-                            <TextBlock x:Name="ViewDepartment" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientDepartment}"/>
+                            <TextBlock x:Name="ViewDepartment" Text="{Binding PatientDepartment}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
 
                         <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="50,5,10,0">
                             <Label  Style="{StaticResource PreviewLabelStyles}">Ward :</Label>
-                            <TextBlock x:Name="ViewWard" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientWard}"/>
+                            <TextBlock x:Name="ViewWard" Text="{Binding PatientWard}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
 
                         <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Margin="10,5,10,10">
                             <Label  Style="{StaticResource PreviewLabelStyles}">Doctor in Charge :</Label>
-                            <TextBlock x:Name="ViewDoc" Style="{StaticResource TextBlockStyle}" Text="{Binding PatientDotorcInCharge}"/>
+                            <TextBlock x:Name="ViewDoc" Text="{Binding PatientDotorcInCharge}" Style="{StaticResource TextBlockStyle}"/>
                         </StackPanel>
                     </Grid>
                 </GroupBox>
             </Grid>
-            
-            <StackPanel Grid.Row="2" Grid.ColumnSpan="3" HorizontalAlignment="Right" VerticalAlignment="Top" Orientation="Horizontal" Margin="20,10,26,0">
-                <Button Style="{StaticResource ButtonStyle}" Content="Default Print" Margin="0,0,5,0" Command="{Binding Path=DefaultPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}"/>
-                <Button Style="{StaticResource ButtonStyle}" Content="Configure Print" Command="{Binding Path=ConfigureAndPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}"/>
+
+            <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,10,26,0">
+                <Button Command="{Binding Path=DefaultPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{StaticResource ButtonStyle}" Content="Default Print" Margin="0,0,5,0"/>
+                <Button Command="{Binding Path=ConfigureAndPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{StaticResource ButtonStyle}" Content="Configure Print"/>
             </StackPanel>
             
 		</Grid>
