--- a/PatientRecordMVVM/Resources/MainDictionary.xaml
+++ b/PatientRecordMVVM/Resources/MainDictionary.xaml
@@ -44,9 +44,9 @@
     <!--Style for Buttons-->
     <Style x:Key="ButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource StyleControl}">
         <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Background" Value="#32afa9"/>
+        <Setter Property="Background" Value="#1f3e66"/>
         <Setter Property="Foreground" Value="White"/>
-        <Setter Property="BorderBrush" Value="#32afa9"/>
+        <Setter Property="BorderBrush" Value="#1f3e66"/>
         <Setter Property="Padding" Value="5"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="Width" Value="105"/>
