--- a/PatientRecordMVVM/Views/HomeCareMain.xaml
+++ b/PatientRecordMVVM/Views/HomeCareMain.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        FontFamily="{materialDesign:MaterialDesignFont}"
         xmlns:local="clr-namespace:PatientRecordMVVM.Views"
         mc:Ignorable="d"
-        Title="HomeCareMain" Height="600" Width="1080" Foreground="White">
+        Title="HomeCareMain" Height="850" Width="1500" Foreground="White">
     <Window.Resources>
         <Storyboard x:Key="MenuOpen">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridSideMenu">
@@ -32,9 +33,23 @@
     </Window.Triggers>
     
     <Grid>
-        <Image x:Name="Logo" Source="/PatientRecordMVVM;component/Images/logo.jpg" Opacity="0.4" HorizontalAlignment="Center"/>
-        <Grid Height="60" VerticalAlignment="Top" Background="#2c8a93">
-            <TextBlock Text="HOME CARE" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition Width="8*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="25*"/>
+        </Grid.RowDefinitions>
+        
+        <Image x:Name="Logo" Grid.Row="1" Grid.ColumnSpan="3"  Source="/PatientRecordMVVM;component/Images/logo.jpg" Opacity="0.12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Grid Grid.Row="0" Grid.ColumnSpan="3" Height="60" VerticalAlignment="Top" Background="#2c8a93">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Image Source="/PatientRecordMVVM;component/Images/logo.jpg" Width="30" Height="30" Margin="0,0,20,0"/>
+                <TextBlock Text="HOME CARE" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            </StackPanel>
             <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Foreground="White" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
                 <StackPanel Width="150">
                     <Button Content="Settings"/>
@@ -43,7 +58,8 @@
                 </StackPanel>
             </materialDesign:PopupBox>
         </Grid>
-        <Grid x:Name="GridSideMenu" Width="60" HorizontalAlignment="Left" Background="#1f3e66">
+        
+        <Grid x:Name="GridSideMenu" Grid.RowSpan="2" Grid.Column="0" Width="210" HorizontalAlignment="Left" Background="#1f3e66">
             <StackPanel Orientation="Vertical">
                 <Grid Height="60" VerticalAlignment="Top">
                     <Button x:Name="ButtonCloseMenu" Background="{x:Null}" BorderBrush="{x:Null}" Width="60" Height="60" HorizontalAlignment="Right" Visibility="Collapsed" Click="ButtonCloseMenu_Click">
@@ -55,7 +71,7 @@
                 </Grid>
                 <ListView Foreground="White" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                     <ListViewItem Height="60">
-                        <Button Background="#1f3e66" BorderBrush="#1f3e66" Width="190" Height="40" VerticalAlignment="Top">
+                        <Button Command="{Binding Path=AddPatientCommand}" CommandParameter="{Binding ElementName=AddPatient}" Background="#1f3e66" BorderBrush="#1f3e66" Width="190" Height="40" VerticalAlignment="Top">
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                 <materialDesign:PackIcon Kind="Add" Foreground="White" Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="-5,0,20,0"/>
                                 <TextBlock Text="Add Patient Details" FontSize="12" VerticalAlignment="Center" Margin='0,0,20,0'/>
@@ -64,6 +80,25 @@
                     </ListViewItem>
                 </ListView>
             </StackPanel>
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <local:AddPatientRecordDetails 
+                x:Name="AddPatient" 
+                HorizontalAlignment="Center"
+                Width="600"
+                Height="700"
+                Margin="0,0,20,0"
+             />
+        </Grid>
+        
+        <Grid Grid.Row="1" Grid.Column="2">
+            <local:PrintPreviewControl
+                x:Name="PrintPreview"
+                HorizontalAlignment="Center"
+                Width="600"
+                Height="700"
+                />
         </Grid>
     </Grid>
 </Window>
