--- a/PatientRecordMVVM/Resources/MainDictionary.xaml
+++ b/PatientRecordMVVM/Resources/MainDictionary.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
+    xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+    xmlns:converters="clr-namespace:MaterialDesignThemes.Wpf.Converters;assembly=MaterialDesignThemes.Wpf">
 
     <!--Style for border in controls-->
     <Style x:Key="StyleControl" TargetType="{x:Type Control}">
@@ -9,6 +11,12 @@
                 <Setter Property="CornerRadius" Value="3" />
             </Style>
         </Style.Resources>
+    </Style>
+   
+    <!--Style for grid shadows effect-->
+    <DropShadowEffect x:Key="DropShadow" BlurRadius="25" Color="#1f3e66"/>
+    <Style x:Key="GridShadow" TargetType="{x:Type Grid}">
+        <Setter Property="Effect" Value="{StaticResource DropShadow}"/>
     </Style>
 
     <!--Style for the Textboxes-->
@@ -67,10 +75,16 @@
 
     <!--Style for Textblocks in Preview window-->
     <Style x:Key="TextBlockStyleControl" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBlockStyle}">
-        <Setter Property="FontWeight" Value="DemiBold"/>
-        <Setter Property="Margin" Value="10"/>
-        <Setter Property="Padding" Value="7"/>
-        <Setter Property="Background" Value="#9dc6a7"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Background" Value="#58af9d"/>
+    </Style>
+
+    <!--Style for Labels in PrintPreview User Control-->
+    <Style x:Key="LabelStyleControl" TargetType="{x:Type Label}" BasedOn="{StaticResource LabelStyles}">
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
 
     <!--Styles for header template-->
@@ -80,6 +94,104 @@
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="Margin" Value="10"/>
+    </Style>
+    
+    <!--Style for combo boxes-->
+    <Style x:Key="ComboBoxButtonStyle" TargetType="{x:Type ToggleButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Border
+                        x:Name="border"
+                        Background="White"
+                        CornerRadius="3"
+                        BorderBrush="LightGray"
+                        BorderThickness="1">
+                        <ContentPresenter/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ComboBoxTextBoxStyle" TargetType="{x:Type TextBox}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Grid>
+                        <Border
+                            CornerRadius="3"
+                            BorderBrush="LightGray"
+                            BorderThickness="1"
+                            Background="{TemplateBinding Background}">
+                            <ScrollViewer x:Name="PART_ContentHost"/>
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ComboBox}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition MaxWidth="18"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="PART_EditableTextBox"
+                                 Style="{StaticResource ComboBoxTextBoxStyle}"
+                                 Padding="5"
+                                 Height="30"/>
+                        <ToggleButton Grid.Column="1" 
+                                      Style="{StaticResource ComboBoxButtonStyle}"
+                                      Margin="0"
+                                      Height="30"
+                                      Focusable="False"
+                                      IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                      ClickMode="Press">
+                            <Path Grid.Column="1"
+                                  HorizontalAlignment="Center"
+                                  VerticalAlignment="Center"
+                                  Data="M 0 0 L 4 4 L 8 0 Z"
+                                  Fill="DodgerBlue"/>
+                        </ToggleButton>
+                        <ContentPresenter x:Name="ContentSite"
+                                          Content="{TemplateBinding SelectedItem}"
+                                          ContentTemplate="{TemplateBinding ItemTemplate}"
+                                          ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
+                                          VerticalAlignment="Center"
+                                          HorizontalAlignment="Left"                                          
+                                          Margin="5,0,0,0"/>
+                        <Popup x:Name="Popup"
+                               Placement="Bottom"
+                               IsOpen="{TemplateBinding IsDropDownOpen}"                             
+                               AllowsTransparency="False"
+                               Focusable="False"
+                               PopupAnimation="Slide">
+                            <Grid x:Name="DropDown"
+                                  SnapsToDevicePixels="True"
+                                  Background="White"
+                                  MinWidth="{TemplateBinding MaxWidth}"
+                                  MaxHeight="{TemplateBinding MaxDropDownHeight}">
+                                <Border
+                                    x:Name="DropDownBorder"
+                                    BorderBrush="LightGray"
+                                    BorderThickness="1"
+                                    CornerRadius="3"/>
+                                <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
+                                    <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained"/>
+                                </ScrollViewer>
+                            </Grid>
+                        </Popup>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
