--- a/PatientRecordMVVM/Resources/MainDictionary.xaml
+++ b/PatientRecordMVVM/Resources/MainDictionary.xaml
@@ -158,15 +158,15 @@
                                   HorizontalAlignment="Center"
                                   VerticalAlignment="Center"
                                   Data="M 0 0 L 4 4 L 8 0 Z"
-                                  Fill="DodgerBlue"/>
+                                  Fill="Gray"/>
                         </ToggleButton>
-                        <ContentPresenter x:Name="ContentSite"
-                                          Content="{TemplateBinding SelectedItem}"
-                                          ContentTemplate="{TemplateBinding ItemTemplate}"
-                                          ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
-                                          VerticalAlignment="Center"
-                                          HorizontalAlignment="Left"                                          
-                                          Margin="5,0,0,0"/>
+                        <ContentPresenter Name="ContentSite"  
+                               Content="{TemplateBinding SelectedItem}"  
+                               ContentTemplate="{TemplateBinding ItemTemplate}"  
+                               ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"  
+                               VerticalAlignment="Center"  
+                               HorizontalAlignment="Left"  
+                               Margin="5,0,0,0"/>
                         <Popup x:Name="Popup"
                                Placement="Bottom"
                                IsOpen="{TemplateBinding IsDropDownOpen}"                             
@@ -194,4 +194,6 @@
         </Setter>
     </Style>
 
+    <!--Style for Datepicker-->
+    
 </ResourceDictionary>
