--- a/PatientRecordMVVM/Views/HomeCareMain.xaml
+++ b/PatientRecordMVVM/Views/HomeCareMain.xaml
@@ -10,10 +10,14 @@
         mc:Ignorable="d"
         Title="HomeCareMain" Height="850" Width="1500" Foreground="White" ResizeMode="CanResizeWithGrip">
     <Window.DataContext>
-        <vm:HomeCareMainViewModel />
+        <vm:HomeCareMainViewModel/>
     </Window.DataContext>
-    
+
     <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:PatientRecordDetailsViewModel}">
+            <local:AddPatientRecordDetails/>
+        </DataTemplate>
+        
         <Storyboard x:Key="MenuOpen">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Width)" Storyboard.TargetName="GridSideMenu">
                 <EasingDoubleKeyFrame KeyTime="0" Value="60"/>
@@ -50,10 +54,10 @@
         </Grid.RowDefinitions>
         
         <Image x:Name="Logo" Grid.Row="1" Grid.ColumnSpan="3"  Source="/PatientRecordMVVM;component/Images/logo.jpg" Opacity="0.12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Grid Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource GridShadow}" Height="60" VerticalAlignment="Top" Background="#1f3e66">
+        <Grid Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource GridShadow}" Height="60" VerticalAlignment="Top" Background="#1A365D">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Image Source="/PatientRecordMVVM;component/Images/logo.jpg" Width="30" Height="30" Margin="0,0,20,0"/>
-                <TextBlock Text="HOME CARE" FontSize="22" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                <TextBlock Text="HOME CARE" FontSize="22" Foreground="#CEE8EC" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </StackPanel>
             <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Foreground="White" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
                 <StackPanel Width="150">
@@ -64,22 +68,22 @@
             </materialDesign:PopupBox>
         </Grid>
 
-        <Grid x:Name="GridSideMenu" Grid.RowSpan="2" Grid.Column="0" Style="{StaticResource GridShadow}" Width="60" HorizontalAlignment="Left" Background="#1f3e66">
+        <Grid x:Name="GridSideMenu" Grid.RowSpan="2" Grid.Column="0" Style="{StaticResource GridShadow}" Width="210" HorizontalAlignment="Left" Background="#1A365D">
             <StackPanel Orientation="Vertical">
-                <Grid Height="60" VerticalAlignment="Top">
-                    <Button x:Name="ButtonCloseMenu" Background="{x:Null}" BorderBrush="{x:Null}" Width="60" Height="60" HorizontalAlignment="Right" Visibility="Collapsed" Click="ButtonCloseMenu_Click">
+                <Grid Background="#CEE8EC" Height="150" VerticalAlignment="Top">
+                    <Button x:Name="ButtonCloseMenu" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Right" VerticalAlignment="Top" Visibility="Collapsed" Click="ButtonCloseMenu_Click">
                         <materialDesign:PackIcon Kind="ArrowLeft" Width="25" Height="25"/>
                     </Button>
-                    <Button x:Name="ButtonOpenMenu" Background="{x:Null}" BorderBrush="{x:Null}" Width="60" Height="60" HorizontalAlignment="Right" Click="ButtonOpenMenu_Click">
+                    <Button x:Name="ButtonOpenMenu" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Right" VerticalAlignment="Top" Click="ButtonOpenMenu_Click">
                         <materialDesign:PackIcon Kind="Menu" Width="25" Height="25"/>
                     </Button>
                 </Grid>
-                <ListView Foreground="White" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListView Foreground="White" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,50,0,0">
                     <ListViewItem Height="60">
-                        <Button Command="{Binding Path=AddPatientCommand}" CommandParameter="{Binding ElementName=AddPatient}" Background="#1f3e66" BorderBrush="#1f3e66" Width="190" Height="40" VerticalAlignment="Top">
+                        <Button Command="{Binding Path=AddPatientCommand}" CommandParameter="{Binding ElementName=AddPatient}" Background="#298A9A" BorderBrush="#298A9A" Width="190" Height="40" VerticalAlignment="Top">
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                 <materialDesign:PackIcon Kind="Add" Foreground="White" Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="-5,0,20,0"/>
-                                <TextBlock Text="Add Patient Details" FontSize="12" VerticalAlignment="Center" Margin='0,0,20,0'/>
+                                <TextBlock Text="Add Patient Details" FontSize="13" VerticalAlignment="Center" Margin='0,0,20,0'/>
                             </StackPanel>
                         </Button>
                     </ListViewItem>
@@ -88,15 +92,12 @@
         </Grid>
 
         <Grid Grid.Row="1" Grid.ColumnSpan="3">
-            <local:AddPatientRecordDetails 
-                x:Name="AddPatient" 
-                DataContext="{Binding Path=PatientRecordDetailsViewModel}"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Center"
-                Width="800"
-                Height="730"
-                Margin="20,0,20,0"
-             />
+            <ContentControl 
+                x:Name="ContentDisplay" 
+                Content="{Binding SelectedViewModel}" 
+                Width="700"
+                Height="730"  
+                Margin="20,0,20,0"/>
         </Grid>
     </Grid>
 </Window>
